unpackaged/main/default/objects/Live_Event_Coverage__c/Live_Event_Coverage__c.object-meta.xml
<CustomObject>
    <label>Live Event Coverage</label>
    <nameField>
        <displayFormat>LE - {0}</displayFormat>
        <label>Live Event Coverage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Live Event Coverage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>