unpackaged/main/default/objects/Live_Event_Coverage__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Live Event Coverage</relationshipLabel>
    <relationshipName>Live_Event_Coverage</relationshipName>
    <type>Lookup</type>
</CustomField>