unpackaged/main/default/objects/Live_Event_Coverage__c/fields/Additional_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Additional_Contacts__c</fullName>
    <inlineHelpText>Any additional people that should be looped into the case/coverage: technical lead, coordinators, people at the venue, etc.</inlineHelpText>
    <label>Additional Contacts</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>