unpackaged/main/default/objects/Live_Event_Coverage__c/fields/BGS_Managed_Event__c.field-meta.xml
<CustomField>
    <fullName>BGS_Managed_Event__c</fullName>
    <label>BGS Managed Event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>