unpackaged/main/default/objects/Live_Event_Coverage__c/fields/BGS_Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>BGS_Project_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BGS Project Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Live_Event_Coverage1</relationshipName>
    <type>Lookup</type>
</CustomField>