unpackaged/main/default/objects/Live_Event_Coverage__c/fields/Communication_Channel__c.field-meta.xml
<CustomField>
    <fullName>Communication_Channel__c</fullName>
    <label>Communication Channel</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Slack (Brightcove&#39;s Workspace)</fullName>
            </value>
            <value>
                <fullName>Gotomeeting (Brightcove&#39;s account)</fullName>
            </value>
            <value>
                <fullName>Customer will provide access to their Instant Messanger</fullName>
            </value>
            <value>
                <fullName>Customer will provide a phone bridge</fullName>
            </value>
            <value>
                <fullName>Not yet defined</fullName>
            </value>
            <value>
                <fullName>Salesforce Case/Emails</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>