unpackaged/main/default/objects/Live_Event_Coverage__c/fields/CovEndDateTime__c.field-meta.xml
<CustomField>
    <fullName>CovEndDateTime__c</fullName>
    <formula>DATETIMEVALUE(TEXT(Event_End_Date__c)&amp;&quot; &quot;&amp;
LEFT(TEXT(Event_End_Time__c),8))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CovEndDateTime - Remove</label>
    <type>DateTime</type>
</CustomField>