unpackaged/main/default/objects/Live_Event_Coverage__c/fields/Coverage_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Start_Date_Time__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Coverage Start Date/Time</label>
    <type>DateTime</type>
</CustomField>