unpackaged/main/default/objects/Live_Event_Coverage__c/fields/Covered_By__c.field-meta.xml
<CustomField>
    <fullName>Covered_By__c</fullName>
    <label>Covered By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Both TS and NOC</fullName>
            </value>
            <value>
                <fullName>NOC</fullName>
            </value>
            <value>
                <fullName>TS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>