unpackaged/main/default/objects/Live_Event_Coverage__c/fields/CovStartDateTime__c.field-meta.xml
<CustomField>
    <fullName>CovStartDateTime__c</fullName>
    <formula>DATETIMEVALUE(TEXT(Event_Start_Date__c)&amp;&quot; &quot;&amp; 
LEFT(TEXT(Event_Start_Time__c),8))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CovStartDateTime - REMOVE</label>
    <type>DateTime</type>
</CustomField>