unpackaged/main/default/objects/Live_Event_Coverage__c/fields/Event_End__c.field-meta.xml
<CustomField>
    <fullName>Event_End__c</fullName>
    <inlineHelpText>Note: Events longer than 4 hours will go into overages. Please contact cs_leadership@brightcove.com with any concerns or questions</inlineHelpText>
    <label>Event End</label>
    <type>DateTime</type>
</CustomField>