unpackaged/main/default/objects/Live_Event_Coverage__c/fields/Event_End_Month__c.field-meta.xml
<CustomField>
    <fullName>Event_End_Month__c</fullName>
    <inlineHelpText>The month the &quot;support coverage&quot; ends, not the &quot;event&quot; ends. Specify the time in the customer&#39;s time zone.</inlineHelpText>
    <label>Event End Month</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
            </value>
            <value>
                <fullName>02</fullName>
            </value>
            <value>
                <fullName>03</fullName>
            </value>
            <value>
                <fullName>04</fullName>
            </value>
            <value>
                <fullName>05</fullName>
            </value>
            <value>
                <fullName>06</fullName>
            </value>
            <value>
                <fullName>07</fullName>
            </value>
            <value>
                <fullName>08</fullName>
            </value>
            <value>
                <fullName>09</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>