unpackaged/main/default/objects/Live_Event_Coverage__c/fields/Event_End_Year__c.field-meta.xml
<CustomField>
    <fullName>Event_End_Year__c</fullName>
    <inlineHelpText>The year the &quot;support coverage&quot; ends, not the &quot;event&quot; ends. Specify the time in the customer&#39;s time zone.</inlineHelpText>
    <label>Event End Year</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2014</fullName>
            </value>
            <value>
                <fullName>2015</fullName>
            </value>
            <value>
                <fullName>2016</fullName>
            </value>
            <value>
                <fullName>2017</fullName>
            </value>
            <value>
                <fullName>2018</fullName>
            </value>
            <value>
                <fullName>2019</fullName>
            </value>
            <value>
                <fullName>2020</fullName>
            </value>
            <value>
                <fullName>2021</fullName>
            </value>
            <value>
                <fullName>2022</fullName>
            </value>
            <value>
                <fullName>2023</fullName>
            </value>
            <value>
                <fullName>2024</fullName>
            </value>
            <value>
                <fullName>2025</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>