unpackaged/main/default/objects/Live_Event_Coverage__c/fields/Event_Point_Of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Event_Point_Of_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The primary person to contact during the event coverage &amp; to setup a time to test.</inlineHelpText>
    <label>Event Main Point Of Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Live Event Coverage</relationshipLabel>
    <relationshipName>Live_Event_Coverage</relationshipName>
    <type>Lookup</type>
</CustomField>