unpackaged/main/default/objects/Live_Event_Coverage__c/fields/Event_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Start_Date__c</fullName>
    <defaultValue>(Today() + 7)</defaultValue>
    <label>Coverage Start Date</label>
    <type>Date</type>
</CustomField>