unpackaged/main/default/objects/Live_Event_Coverage__c/fields/Event_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Event_Start_Time__c</fullName>
    <inlineHelpText>Use 24 notation (military time) when entering the information (ex.1:00 AM = 1:00 and 1:00 PM = 13:00)</inlineHelpText>
    <label>Coverage Start Time</label>
    <type>Time</type>
</CustomField>