unpackaged/main/default/objects/Live_Event_Coverage__c/fields/High_Profile__c.field-meta.xml
<CustomField>
    <fullName>High_Profile__c</fullName>
    <label>High Profile?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>